--- a/refresher/src/app/app.component.html
+++ b/refresher/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-persons-input (personCreate)="onPersonCreated($event)"></app-persons-input>
-<app-persons [persons]="persons"></app-persons>
+<a routerLink="/">Person List</a> | <a routerLink="/input">Input</a>
+<hr>
+<router-outlet></router-outlet>
