--- a/refresher/src/app/persons/persons.component.html
+++ b/refresher/src/app/persons/persons.component.html
@@ -1,3 +1,3 @@
 <ul>
-  <li *ngFor="let person of persons">{{ person}}</li>
+  <li *ngFor="let person of persons" (click)="onRemovePerson(person)">{{ person}}</li>
 </ul>
