--- a/refresher/src/app/persons/persons.component.html
+++ b/refresher/src/app/persons/persons.component.html
@@ -1,3 +1,4 @@
-<ul>
+<p *ngIf="isFetching">Fetching data...</p>
+<ul *ngIf="!isFetching">
   <li *ngFor="let person of persons" (click)="onRemovePerson(person)">{{ person}}</li>
 </ul>
